# fly

./: .gitignore  README.md  pyproject.toml
anthill/: __init__.py  agent.py  workflow.py
anthill/deploy/: __init__.py  export.py  wrapper.py
anthill/prompts/: __init__.py  data.py  deploy.py  model.py  train.py
anthill/train/: __init__.py  callbacks.py  config.py  sanity.py  trainer.py
examples/: analogue_clock.py  claude_agent.py  ollama_agent.py
fly/: __init__.py  agent.py  workflow.py
fly/deploy/: __init__.py  export.py  wrapper.py
fly/prompts/: __init__.py  _base.py  data.py  deploy.py  model.py  train.py
fly/train/: __init__.py  sanity.py  trainer.py
