[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "anthill"
version = "0.1.0"
description = "An agentic framework for building custom deep learning models with your own LLM"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["deep-learning", "pytorch", "agentic", "llm", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "tqdm>=4.65",
    "numpy>=1.24",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]
hf = [
    "transformers>=4.30",
    "huggingface_hub>=0.16",
]

[project.urls]
Homepage = "https://github.com/jerod92/anthill"
Issues = "https://github.com/jerod92/anthill/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["anthill*"]

[tool.ruff]
line-length = 100
target-version = "py310"
